# pynflate

./: pyproject.toml
.github/workflows/: run-tests.yml
src/pynflate/: lz77.py
